--- a/dcrm/web/templates/home.html
+++ b/dcrm/web/templates/home.html
@@ -4,26 +4,29 @@
 
 <div class="col-md-6 offset-md-3">
 
-<h1>Login</h1>
-</br>
-<form method="POST" action={% url 'home' %}>
-    {% csrf_token %}
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    {% if user.is_authenticated %}
+    <h1>Hello World</h1>
+    </br>
 
+    {% else %}
+    <h1>Login</h1>
+    </br>
+    <form method="POST" action={% url 'home' %}>
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <input type="text" class="form-control" name="username" placeholder="Username" required>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
+        </div>
+        </br>
+        <button type="submit" class="btn btn-secondary">Login</button>
+    </form>
+
+    {% endif %}
+    
 </div>
 
 {% endblock %}
