--- a/dcrm/web/templates/navbar.html
+++ b/dcrm/web/templates/navbar.html
@@ -14,7 +14,10 @@
 
           {% else %}
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Login</a>
+            <a class="nav-link" href="{% url 'home' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
           </li>
 
           {% endif %}
