--- a/dcrm/web/templates/register.html
+++ b/dcrm/web/templates/register.html
@@ -2,6 +2,37 @@
 
 {% block content %}
 
-<h1>Register</h1>
+<div class="col-md-6 offset-md-3">
+
+    <h1>Register</h1>
+    </br>
+
+    <form method="POST" action="">
+        {% csrf_token %}
+
+        {% if form.errors %}
+          <div class="col-md-6 offset-md-3">
+
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+              <strong>Your form has errors</strong>
+              {% for field in form %}
+                {% if field.errors %}
+                  {{ field.errors }}
+                {% endif %}
+              {% endfor %}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            </br>
+          
+          </div>
+        {% endif %}
+        
+        {{ form.as_p }}
+
+        </br>
+        <button type="submit" class="btn btn-secondary">Register</button>
+    </form>
+
+</div>
 
 {% endblock %}
