--- a/dcrm/web/templates/home.html
+++ b/dcrm/web/templates/home.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 
-    <div>
-
-      {% if user.is_authenticated %}
-          <h1>Records...</h1>
+    {% if user.is_authenticated %}
+        <div>
+          <h1>Customer Records</h1>
           </br>
 
           <table class="table table-striped table-hover">
@@ -26,7 +25,7 @@
             {% if records %}
                 {% for record in records %}
                     <tr>
-                      <th scope="row">{{ record.id }}</th>
+                      <th scope="row"><a href="{% url 'record' record.id %}">{{ record.id }}</a></th>
                       <td>{{ record }}</td>
                       <td>{{ record.email }}</td>
                       <td>{{ record.phone }}</td>
@@ -40,8 +39,10 @@
             {% endif %}
             </tbody>
           </table>
+        </div>
 
-      {% else %}
+    {% else %}
+        <div class="col-md-6 offset-md-3">
           <h1>Login</h1>
           </br>
     
@@ -59,8 +60,8 @@
             <button type="submit" class="btn btn-secondary">Login</button>
           </form>
 
-      {% endif %}
-    
-    </div>
+        </div>
+
+    {% endif %}
 
 {% endblock %}
