--- a/dcrm/web/templates/edit_record.html
+++ b/dcrm/web/templates/edit_record.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-6 offset-md-3">
 
-    <h1>Add Record</h1>
+    <h1>Edit Record</h1>
     </br>
 
     <form method="POST" action="">
@@ -13,7 +13,7 @@
         {{ form.as_p }}
 
         </br>
-        <button type="submit" class="btn btn-secondary">Add Record</button>
+        <button type="submit" class="btn btn-secondary">Update Record</button>
     </form>
 
 </div>
