--- a/dcrm/web/templates/record.html
+++ b/dcrm/web/templates/record.html
@@ -51,6 +51,7 @@
 
     </br>
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+    <a href="{% url 'edit_record' customer_record.id %}" class="btn btn-secondary">Edit</a>
     <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
 
 </div>
