--- a/dcrm/web/templates/add_record.html
+++ b/dcrm/web/templates/add_record.html
@@ -13,6 +13,7 @@
         {{ form.as_p }}
 
         </br>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
         <button type="submit" class="btn btn-secondary">Add Record</button>
     </form>
 
