--- a/dcrm/web/templates/edit_record.html
+++ b/dcrm/web/templates/edit_record.html
@@ -13,6 +13,7 @@
         {{ form.as_p }}
 
         </br>
+        <a href="{% url 'record' current_record.id %}" class="btn btn-secondary">Back</a>
         <button type="submit" class="btn btn-secondary">Update Record</button>
     </form>
 
